name:                language-parser-mixfix
version:             0.1.0.0
synopsis:            mixfix parsing
description:         Please see README.md
homepage:            http://github.com/antitypical/language-parser-mixfix#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2016 Rob Rix
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Parser.MixFix
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite language-parser-mixfix-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , language-parser-mixfix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/language-parser-mixfix
